2010-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* site/[index|test].html: When 'moon-unit' project is executed with
	VS.NET the generated web page contains the iframe that allows
	navigation state to work (without an exception). We duplicate this
	here to allow testing the feature.

2010-07-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls.Primitives/SelectorTest.cs: Update
	  the tests to not deliberately create unverifiable code. Mono
	  doesn't like that anymore.

2010-07-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/UIElementTest.cs: Fix this test so that it
	  gives predictable results.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Update these two
	  SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Update to SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update to SL4.

2010-07-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls.Primitives/PopupTest.cs: Update the
	  popup tests to SL4. They proved hard to fix without
	  regressing other tests.

	* System.Windows.Controls/ContentPresenterTest.cs: Add an
	  extra assert to

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Darn, put the
	  moonlight bug on the right test.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/MediaElementTest.cs:
	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  Updated to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Whoops!

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/OpenFileDialogTest.cs: Update the
	  OpenFileDialog tests.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/SaveFileDialogTest.cs: Update the
	  SaveFileDialog tests
